# vim: set noexpandtab:

2012-08-26 Steve
	* Added event weight functions for A-B3, A-B
	* Default event weight now uses A-D7 lumi and pileup weights

2012-08-21 Steve
	* Fixing global variable LUMI_A_B14: 5381 -> 5835 [1/pb]
		* I double checked the lumi calculation with lumi-calc
		  here: https://atlas-lumicalc.cern.ch/results/717050/result.html

2012-08-17 Steve
	* Updated to MultiLep-01-02-04 and SUSYTools-00-01-04
	* Tagging SusyNtuple-00-00-22

2012-08-13 Steve
	* Add flags for toggling signal lepton cuts for simple optimization studies

2012-08-10 Anyes
	* Update BTag MV1 weights to the lastest values for 2012 (85%:0.122 60%:0.98)
	  from here: https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/BtagAnalysis172#LC_Jets
	
2012-08-09 Anyes
	* Add BTagCalib code & function in SusyNtTools to get the weight.
	* Some update to TGuiUtils

2012-08-08 Steve
	* Updated e-mu overlap removal to remove all possible pairings with each lepton
	* Also updated mu-mu overlap removal in the same way
	* Tagging SusyNtuple-00-00-21
	* Also updated e-e overlap removal in the same way (after the tag)

2012-08-07 Steve
	* Changed default btag WP to MV1 @ 85%
	* Keeping taus separate from the lepton vector.
		* Still indecisive about how to organize it exactly

2012-08-01 Steve
	* Added streamer for vector<Tau>
		* Somehow it was able to write out the taus fine without this???  WTF??
	* Tagging SusyNtuple-00-00-20

2012-07-31 Steve
	* Updated README and install script
	* Incremented ClassDef number for Met class (oops)
	* Tagging SusyNtuple-00-00-19

2012-07-31 Anyes
	* Updates to TGuiUtils

2012-07-31 Steve
	* Added heavy flavor overlap removal decision to Event as hfor
	* Tagging SusyNtuple-00-00-18

2012-07-30 Steve
	* Added flag for toggling tau selection
	* Added functions for selecting taus
		* baseline objects, overlap removal, signal objects
	* Tau class now inherits from Lepton
		* I'm not totally sure of this... Need to consider all of the use cases.